--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,13 @@
     "removals": {},
     "dependencies": {
         "@prisma/client": "^6.19.1",
+        "bcrypt": "^6.0.0",
+        "cookie-parser": "^1.4.7",
         "express": "^5.2.1",
         "express-handlebars": "^8.0.4",
-        "prisma": "^6.19.1"
+        "jsonwebtoken": "^9.0.3",
+        "prisma": "^6.19.1",
+        "zod": "^4.3.5"
     },
     "scripts": {
         "dev": "nodemon src/index.js",
